<resources>
    <string name="app_name">포디랜드 POC</string>
    <string name="loading">결과 측정 중 ...</string>
    <string name="toolbar_btn_cam">다시 선택</string>
    <string name="toolbar_btn_home">처음으로</string>
    <string name="toolbar_btn_pre">이전</string>
    <string name="toolbar_btn_type">유형 보기</string>
    <string name="home_btn_start">시작해보자 !</string>
    <string name="home_btn_prac">연습해보자 !</string>
    <string name="main_build">블록 쌓기</string>
    <string name="main_const">구성 놀이</string>
    <string name="build_cam">카메라</string>
    <string name="build_gall">갤러리</string>
    <string name="build_front">앞쪽</string>
    <string name="build_back">뒤쪽</string>
    <string name="build_right">오른쪽</string>
    <string name="build_left">왼쪽</string>
    <string name="build_up">위쪽</string>
    <string name="item_type">유형/요소</string>
    <string name="item_count">개수</string>
    <string name="item_acc">정확도</string>
    <string name="item_heart">하트</string>
    <string name="result_const">우와 잘했어요!!</string>
    <string name="type_original">기본</string>
    <string name="type_step">계단</string>
    <string name="type_together">모아</string>
    <string name="type_change">틀어</string>
    <string name="type_zigzag">지그재그</string>
    <string name="type_stand">세워</string>
    <string name="type_cross">교차</string>
    <string name="type_turn">돌려</string>
    <string name="type_lean">기대</string>
    <string name="type_askew">비스듬</string>
    <string name="constCam_Explain">아래 보이는 네모에 딱 맞게 찍어주세요!</string>
    <string name="prac_result_1">총 2개의 유형이 쓰였어요!</string>
    <string name="prac_result_2">총 4개의 유형이 쓰였어요!</string>
    <string name="prac_result_3">총 6개의 유형이 쓰였어요!</string>
    <string name="prac_result_4">총 8개의 유형이 쓰였어요!</string>
    <string name="prac_result_5">총 10개의 유형이 쓰였어요!</string>
    <string name="result_good">참 잘했어요!</string>
    <string name="result_text">총 %1$d개 출력 되었습니다!</string>
    <string name="toolbar_btn_join">회원가입</string>
    <string name="login_email">이메일 입력</string>
    <string name="login_pw">비밀번호 입력</string>
    <string name="login_btn">로그인</string>
    <string name="login_btn_kakao">카카오 로그인</string>
    <string name="login_btn_signup">회원가입</string>
    <string name="login_app_ill">앱 일러스트</string>
    <string name="login_app_close">닫기</string>
    <string name="login_fail_message">아이디 또는 비밀번호가 올바르지 않습니다.</string>
    <string name="btn_main_mypage">마이페이지</string>
    <string name="auto_login_warning">(공용 기기 사용 자제)</string>
    <string name="auto_login_label">자동로그인</string>
    <string-array name="spinner_age">
        <item>초등학교 입학 전 (~7세)</item>
        <item>초등학생(8세 ~ 13세)</item>
        <item>중학생(14세 ~ 16세)</item>
        <item>고등학생(17세 ~ 19세)</item>
        <item>대학생</item>
        <item>일반</item>
    </string-array>
</resources>