<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/login_app_close"
            android:src="@drawable/ic_btn_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/img_button_ill"
            android:contentDescription="@string/login_app_ill"
            app:layout_constraintTop_toBottomOf="@id/btnClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/gray"
            android:hint="@string/login_email"
            android:textColor="@color/black"
            android:fontFamily="@font/dongle_regular"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@drawable/ic_btn_border_gray"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/login_pw"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:padding="12dp"
            android:fontFamily="@font/dongle_regular"
            android:background="@drawable/ic_btn_border_gray"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvLoginFailMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_fail_message"
            android:textColor="@color/red"
            android:visibility="gone"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/btnKakaoLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/dongle_regular"
            android:textSize="20sp"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:padding="5dp"
            android:background="@drawable/ic_btn_fill_org"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnKakaoLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/dongle_regular"
            android:textSize="20sp"
            android:text="@string/login_btn_kakao"
            android:textColor="#191919"
            android:padding="5dp"
            android:background="@drawable/ic_btn_fill_yellow"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/horizontalLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/btnKakaoLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:text="@string/login_btn_signup"
            android:textColor="@color/black"
            android:fontFamily="@font/dongle_bold"
            android:background="@drawable/ic_btn_org_stroke_join"
            app:layout_constraintTop_toBottomOf="@id/horizontalLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>