<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".util.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <Button
                android:id="@+id/toolbar_btn_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/ic_btn_invisible"
                android:fontFamily="@font/dongle_bold"
                android:gravity="center"
                android:text="@string/toolbar_btn_cam"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/toolbar_btn_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/ic_btn_invisible"
                android:fontFamily="@font/dongle_bold"
                android:gravity="center"
                android:text="@string/toolbar_btn_home"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="78dp"
                android:layout_height="23dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/logo3"
                android:importantForAccessibility="no" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_editor_absoluteX="48dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/categ_front"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_btn_org_stroke"
                android:padding="5dp"
                android:text="@string/build_front"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/dongle_regular"
                android:layout_marginRight="15dp"/>

            <Button
                android:id="@+id/categ_back"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_btn_org_stroke"
                android:padding="5dp"
                android:text="@string/build_back"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/dongle_regular"
                android:layout_marginRight="15dp"/>

            <Button
                android:id="@+id/categ_left"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_btn_org_stroke"
                android:padding="5dp"
                android:text="@string/build_left"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/dongle_regular"/>

            <Button
                android:id="@+id/categ_right"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_btn_org_stroke"
                android:padding="5dp"
                android:text="@string/build_right"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/dongle_regular"
                android:layout_marginLeft="15dp"/>

            <Button
                android:id="@+id/categ_up"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_btn_org_stroke"
                android:padding="5dp"
                android:text="@string/build_up"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/dongle_regular"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="310dp"
        android:layout_height="310dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/block_ex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/ic_btn_border_gray"
                android:gravity="center"
                android:padding="15dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/item_type"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dongle_regular"
                        android:gravity="center"
                        android:text="@string/item_type"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/item_count"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dongle_regular"
                        android:gravity="center"
                        android:text="@string/item_count"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/rank_title"
                        app:layout_constraintStart_toEndOf="@+id/item_type"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/rank_title"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dongle_regular"
                        android:gravity="center"
                        android:text="@string/item_acc"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="12dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>