<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="constructImg"
            type="com.blockmaker.fdland.data.model.ConstructImgResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.main.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <Button
                    android:id="@+id/toolbar_btn_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@drawable/ic_btn_invisible"
                    android:fontFamily="@font/dongle_bold"
                    android:gravity="center"
                    android:text="@string/toolbar_btn_cam"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/toolbar_btn_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/ic_btn_invisible"
                    android:fontFamily="@font/dongle_bold"
                    android:gravity="center"
                    android:text="@string/toolbar_btn_home"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="78dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/logo3"
                    android:importantForAccessibility="no" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="300dp"
            android:layout_height="425dp"
            android:importantForAccessibility="no"
            android:src="@{constructImg.imageUrl}"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/result"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:fontFamily="@font/dongle_regular"
            android:gravity="center"
            android:text="@string/result_const"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="50dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>